gatekeeper/constraints/run-as-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPRunAsUser
metadata:
  name: enforce-run-as-user
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
      - argocd
      - monitoring
